[gd_scene load_steps=86 format=3 uid="uid://bnle248q7hy1i"]

[ext_resource type="Script" uid="uid://icitnoti56fp" path="res://script/human.gd" id="1_pc0hd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f7tl2"]
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6amc"]
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1re5"]
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37t2w"]
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14acu"]
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ttbv"]
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rll14"]
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcfyy"]
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc0hd"]
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srebo"]
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cofnv"]
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wsko"]
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ihgo"]
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk8j0"]
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwmwg"]
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0twpl"]
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3cy8"]
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8raeo"]
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju6x7"]
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhpui"]
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q8hd"]
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhrdo"]
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja8bi"]
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quxid"]
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumq0"]
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_adou6"]
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvjuk"]
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssiei"]
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjd4u"]
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvr7m"]
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyf13"]
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hx6h"]
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72isc"]
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxwlb"]
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbglt"]
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyps0"]
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psfdi"]
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w55wh"]
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbk8u"]
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgi5i"]
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4upem"]
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1anm"]
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub63u"]
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06wav"]
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wqic"]
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkbi7"]
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_addvd"]
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ada"]
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf1al"]
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep454"]
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7hxp"]
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcy5f"]
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtfxq"]
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov0qe"]
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ieme"]
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvek4"]
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca21a"]
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx7rx"]
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ew2"]
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohhrk"]
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxb2"]
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7drnq"]
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu1c5"]
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvy8j"]
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaq5o"]
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxr2f"]
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dods2"]
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1h4k"]
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg3ax"]
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqqja"]
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djgnq"]
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sirve"]
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1mdw"]
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v01r"]
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75eia"]
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kylda"]
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy8xf"]
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8olq5"]
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvvhp"]
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eucg"]
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_r1mdw"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7tl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6amc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1re5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37t2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14acu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ttbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rll14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcfyy")
}],
"loop": true,
"name": &"attackDown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc0hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srebo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cofnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wsko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ihgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk8j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwmwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0twpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3cy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8raeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju6x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhpui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q8hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhrdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja8bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quxid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adou6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvjuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssiei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjd4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvr7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyf13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hx6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72isc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxwlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbglt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyps0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psfdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w55wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbk8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgi5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4upem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1anm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub63u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06wav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wqic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkbi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_addvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ada")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf1al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep454")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7hxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcy5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtfxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov0qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ieme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvek4")
}],
"loop": true,
"name": &"run-attack-top",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca21a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx7rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ew2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohhrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7drnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu1c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvy8j")
}],
"loop": true,
"name": &"runDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaq5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxr2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dods2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1h4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg3ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqqja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djgnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sirve")
}],
"loop": true,
"name": &"runUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1mdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v01r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75eia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kylda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy8xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8olq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvvhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eucg")
}],
"loop": true,
"name": &"runX",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2v01r"]
radius = 69.0
height = 138.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srebo"]
radius = 5.0
height = 22.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cofnv"]
border_color = Color(1, 1, 1, 1)

[node name="human" type="CharacterBody2D"]
script = ExtResource("1_pc0hd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(42, 251)
sprite_frames = SubResource("SpriteFrames_r1mdw")
animation = &"idle"
autoplay = "idle"

[node name="areaDeteksi" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaDeteksi"]
position = Vector2(42, 251)
shape = SubResource("CapsuleShape2D_2v01r")

[node name="human-body" type="CollisionShape2D" parent="."]
position = Vector2(41, 251)
shape = SubResource("CapsuleShape2D_srebo")

[node name="HP" type="ProgressBar" parent="."]
texture_filter = 1
offset_left = 37.0
offset_top = 207.0
offset_right = 41.0
offset_bottom = 234.0
theme_override_colors/font_color = Color(0.611765, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_cofnv")
min_value = 50.0
value = 100.0
fill_mode = 1

[node name="timer-die" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="areaDeteksi" to="." method="_on_area_deteksi_body_entered"]
[connection signal="body_exited" from="areaDeteksi" to="." method="_on_area_deteksi_body_exited"]
[connection signal="timeout" from="timer-die" to="." method="_on_timer_timeout"]
